# 20260603-prez-isi-regional

./: .gitignore  .gitlab-ci.yml  .nojekyll  01_styleParDefaut.qmd  02_modulariteSupport.qmd  03_fenetreModale.qmd  03_parametresExecution.qmd  04_exportPdf.qmd  04_fenetreModale.qmd  05_documentation.qmd  05_exportPdf.qmd  06_documentation.qmd  CHANGELOG  Insee_Commun.scss  Insee_Jaune_toutPublic.scss  Insee_Vert_entreprises_experts.scss  README.md  _02a_fph.qmd  _02b_fpt.qmd  _02c_fpe.qmd  _brand.yml  _documentation.qmd  _exportPdf.qmd  _fenetreModale.qmd  _modulariteSupport.qmd  _partie_commune.qmd  _quarto.yml  _signature.qmd  _styleParDefaut.qmd  _variables.yml  dev.R  fpe.qmd  fph.qmd  fpt.qmd  gitlab-ci.yml  index.html  index.odt  index.qmd  insee_rouge_interne.scss  maPartie.qmd  (+7 more)
.github/workflows/: deploy.yml
R/: data.qmd  generateMap.R  gestionJeuDonnees.R  taillePlotlyFixee.R  taillePlotlyNonFixee.R
_extensions/confetti/: confetti.js
_extensions/insee-clair/: _extension.yml  custom_writer.lua  (+2 more)
css/: Insee_Commun.scss  Insee_Jaune_toutPublic.css  Insee_Jaune_toutPublic.scss  Insee_Vert_entreprises_experts.css  Insee_Vert_entreprises_experts.scss  Insee_rouge_interne.css  Insee_rouge_interne.scss  default.css  insee_clair.css  modal.css  print.css  stylePerso.css
data/: _data.qmd  donnees_carte.Rdata  gestionJeuDonnees.R  jeuDeDonnees_test_param.csv
excalidraw/: dsn_to_bts.excalidraw.json  projet_structure.excalidraw.json
js/: miseEnPage.js
modulesCompl/: customMenu.html  customPremierePage.html  footer.html
public/: presentation-quarto.qmd
(+3 files in other folders)
