[project]
name = "gt2-20250929"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.19.0",
    "great-tables>=0.20.0",
    "jupyter>=1.1.1",
    "plotnine>=0.15.3",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pyyaml>=6.0.3",
]
